--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -353,6 +353,10 @@ h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0; }
 
+#nav-container > ul > li {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500; }
+
 #title {
   font-family: 'Playfair Display', serif;
   font-weight: 500;
@@ -487,7 +491,7 @@ header {
         grid-template-columns: 20% auto; } }
     header > div #logo-container {
       grid-area: logo;
-      padding: 20px; }
+      padding: 5px 20px; }
     header > div #burger-container {
       align-items: center;
       display: flex;
@@ -499,6 +503,15 @@ header {
           display: none !important; } }
       header > div #burger-container i {
         cursor: pointer; }
+        header > div #burger-container i a:link,
+        header > div #burger-container i a:visited {
+          color: #256061;
+          text-decoration: none;
+          transition: 0.25s;
+          font-size: 3.125rem; }
+        header > div #burger-container i a:hover,
+        header > div #burger-container i a:active {
+          color: #fff; }
     header > div #nav-container {
       background-color: #E1CDC3;
       display: none;
@@ -529,7 +542,6 @@ header {
     section1
 ============= */
 #section-1 {
-  position: relative;
   background-image: url("../img/section-1/hero.jpg");
   background-size: cover;
   background-position: center;
@@ -546,18 +558,15 @@ header {
       height: 720px;
       background-position: 0 -1300px; } }
   #section-1 #title {
-    padding: 30px; }
+    padding: 80px 30px; }
     @media (min-width: 768px) {
       #section-1 #title {
         width: 300px;
-        padding: 50px;
-        position: absolute;
-        bottom: 0; } }
+        padding: 90px 50px; } }
     @media (min-width: 992px) {
       #section-1 #title {
-        padding: 30px 0;
-        width: 100%;
-        position: static; } }
+        padding: 90px 0;
+        width: 100%; } }
 /* =============
     section2
 ============= */
