--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -5,6 +5,15 @@ h1,h2,h3,h4,h5,h6,p{
     margin: 0;
     padding: 0;
 }
+#nav-container{
+    >ul{
+        >li{
+            font-family: 'Raleway', sans-serif;
+            font-weight: 500;
+        }
+    }
+    
+}
 #title{
     font-family: 'Playfair Display', serif;
     font-weight: 500;
