--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -1,108 +1,99 @@
 /* =============
     section2
 ============= */
-#section-2{
-
-    @include xl{
+#section-2 {
+    @include xl {
         display: grid;
         grid-template-columns: auto 1200px auto;
     }
 
-    @include md{
+    @include md {
         display: grid;
+        grid-template-areas: ". section-2-container";
         grid-template-columns: 35% auto;
-        grid-template-areas: ". section-2-container";
     }
 
-    @include lg{
+    @include lg {
         display: grid;
+        grid-template-areas: ". section-2-container";
         grid-template-columns: 50% auto;
-        grid-template-areas: ". section-2-container";
     }
-        
-    #section-2-container{
-        margin-bottom: 35px;
-        grid-area: section-2-container;
+
+    #section-2-container {
         display: grid;
+        grid-area: section-2-container;
+        grid-template-areas: ". section-2-content .";
         grid-template-columns: 15px auto 15px;
-        grid-template-areas:
-        ". section-2-content .";
+        margin-bottom: 35px;
 
-        @include md{
-            display: block;
+        @include md {
             align-self: center;
-
-            grid-area: section-2-container;
-
             display: grid;
+            grid-area: section-2-container;
+            grid-template-areas: ". section-2-content .";
             grid-template-columns: 15px auto 15px;
-            grid-template-areas:
-            ". section-2-content .";
         }
 
-        @include lg{
-            display: block;
+        @include lg {
             align-self: center;
-
-            grid-area: section-2-container;
-
             display: grid;
+            grid-area: section-2-container;
+            grid-template-areas: ". section-2-content .";
             grid-template-columns: 15px auto 35px;
-            grid-template-areas:
-            ". section-2-content .";
         }
-        
-        #section-2-content{
-            >hr{
-                border: none;
-                background-color: $sand;
-                height: 2px;
-            }
 
-            #section-2-text{
-                margin: 19px;
-                @include md{
-                    margin: 19px 30px 19px 0;
-                }
-                @include lg{
-                    margin: 25px 0;
-                }
-                >h5{
-                    margin-top: 10px;
-                }
-            }
+        #section-2-content {
             grid-area: section-2-content;
             text-align: center;
 
-            @include md{
+            >hr {
+                background-color: $sand;
+                border: none;
+                height: 2px;
+            }
+
+            #section-2-text {
+                margin: 19px;
+
+                @include md {
+                    margin: 19px 30px 19px 0;
+                }
+
+                @include lg {
+                    margin: 25px 0;
+                }
+
+                >h5 {
+                    margin-top: 10px;
+                }
+            }
+
+            @include md {
                 grid-area: section-2-content;
                 text-align: left;
             }
-            
-            @include lg{
+
+            @include lg {
                 grid-area: section-2-content;
                 text-align: left;
             }
         }
-        
     }
 
-    aside{
+    aside {
         background-image: url('../img/section-2/section2.jpeg');
-        background-size: cover;
         background-position: center;
+        background-size: cover;
         height: 600px;
 
-        @include md{
+        @include md {
             height: 550px;
         }
 
-        @include lg{
+        @include lg {
             height: 1000px;
         }
 
-        @include xl{
-            
-        }
+        @include xl {}
     }
 }
