--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -1,87 +1,78 @@
 /* =============
     section4
 ============= */
-
-#section-4{
-    
-    #gallery{
+#section-4 {
+    #gallery {
         display: grid;
-        gap:20px;
+        gap: 20px;
 
-        @include xl{
+        @include xl {
             grid-template-columns: auto 1200px auto;
         }
 
-        @include md{
+        @include md {
             display: grid;
-            gap:20px;
+            gap: 20px;
+            grid-template-areas: "g1 g1"
+                "g2 g3";
             grid-template-columns: 50% auto;
-            grid-template-areas: 
-            "g1 g1"
-            "g2 g3"
-            ;
         }
 
-        @include lg{
+        @include lg {
             display: grid;
-            gap:20px;
+            gap: 20px;
+            grid-template-areas: "g1 g2"
+                "g1 g3";
             grid-template-columns: 60% auto;
-            grid-template-areas: 
-            "g1 g2"
-            "g1 g3"
-            ;
         }
 
-        #g1{
+        #g1 {
             background-image: url('../img/section-4/gallery1.jpg');
-            background-size: cover;
-            background-position: center;
             background-position: 0 -200px;
+            background-size: cover;
             height: 350px;
 
-            @include md{
+            @include md {
                 background-position: 0 -350px;
+                grid-area: g1;
                 height: 715px;
+            }
+
+            @include lg {
                 grid-area: g1;
-             }
-            
-            @include lg{
                 height: 720px;
-                grid-area: g1;
             }
         }
-            
-        #g2{
+
+        #g2 {
             background-image: url('../img/section-4/gallery2.jpg');
-            background-size: cover;
-            background-position: center;
             background-position: 0 -20px;
+            background-size: cover;
             height: 330px;
 
-            @include md{
-                height: 350px;
+            @include md {
                 grid-area: g2;
+                height: 350px;
             }
 
-            @include lg{
+            @include lg {
                 background-position: 0 -80px;
                 grid-area: g2;
             }
         }
 
-        #g3{
+        #g3 {
             background-image: url('../img/section-4/gallery3.jpg');
-            background-size: cover;
-            background-position: center;
             background-position: 0 -40px;
+            background-size: cover;
             height: 330px;
 
-            @include md{
-                height: 350px;
+            @include md {
                 grid-area: g3;
+                height: 350px;
             }
 
-            @include lg{
+            @include lg {
                 background-position: 0 -100px;
                 grid-area: g3;
             }
