--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -1,98 +1,113 @@
 /* =============
     Typography
 ============= */
-h1,h2,h3,h4,h5,h6,p{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
     margin: 0;
     padding: 0;
 }
-#nav-container{
-    >ul{
-        >li{
+
+#nav-container {
+    >ul {
+        >li {
             font-family: 'Raleway', sans-serif;
             font-weight: 500;
         }
     }
-    
 }
-#title{
+
+#title {
+    color: $white;
     font-family: 'Playfair Display', serif;
-    font-weight: 500;
     font-size: 45px;
+    font-weight: 500;
     line-height: 59px;
     text-align: center;
-    color: $white;
-    @include md{
-        text-align: left;
-        line-height: 75px;
+
+    @include md {
         font-size: 56px;
+        line-height: 75px;
+        text-align: left;
     }
-    @include lg{
-        text-align: center;
+
+    @include lg {
         font-size: 70px;
+        text-align: center;
     }
 }
 
-#section-2-text{
+#section-2-text {
     color: $marble;
-    >h2{
+
+    >h2 {
         font-family: 'Playfair Display', serif;
-        font-weight: 600;
         font-size: 32px;
+        font-weight: 600;
         line-height: 32px;
-        @include md{
+
+        @include md {
             font-size: 35px;
             line-height: 35px;
         }
-        @include lg{
-            width: 80%;
+
+        @include lg {
             font-size: 43px;
             line-height: 43px;
+            width: 80%;
         }
-        
     }
-    >h5{
+
+    >h5 {
         font-family: 'Raleway', sans-serif;
-        font-weight: 500;
         font-size: 18px;
+        font-weight: 500;
         line-height: 25px;
-        @include lg{
-            width: 90%;
+
+        @include lg {
             font-size: 22px;
             line-height: 32px;
+            width: 90%;
         }
     }
 }
 
-#section-3-content{
-    >h1{
-        font-family: 'Playfair Display', serif;
-        font-weight: 900;
-        font-size: 30px;
-        line-height: 40px;
+#section-3-content {
+    >h1 {
         color: $sand;
-        text-align: center; 
-        @include md{
+        font-family: 'Playfair Display', serif;
+        font-size: 30px;
+        font-weight: 900;
+        line-height: 40px;
+        text-align: center;
+
+        @include md {
             font-size: 40px;
             line-height: 50px;
         }
-        @include lg{
+
+        @include lg {
             font-size: 60px;
             line-height: 65px;
         }
     }
 }
 
-#section-5-text{
-    font-family: 'Raleway', sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 35px;
+#section-5-text {
     color: $marble;
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 35px;
 }
 
-#date{
-    font-family: 'Raleway', sans-serif;
-    font-weight: 500;
-    font-size: 14px;
+#date {
     color: $white;
+    font-family: 'Raleway', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
 }
