--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -1,62 +1,59 @@
 /* =============
     section3
 ============= */
-
-#section-3{
-    #section-3-img{
+#section-3 {
+    #section-3-img {
         background-image: url('../img/section-3/hero2.jpg');
-        background-size: cover;
         background-position: center;
+        background-size: cover;
         height: 520px;
 
-        @include md{
+        @include md {
             background-position: 0 -390px;
         }
 
-        @include lg{
-            height: 750px;
+        @include lg {
             background-position: 0 -740px;
+            height: 750px;
         }
     }
-    
-    #section-3-container{
+
+    #section-3-container {
+        display: grid;
+        grid-template-areas: ". section-3-content .";
+        grid-template-columns: 15px auto 15px;
         margin: 34px 0;
 
-        @include xl{
+        @include xl {
             grid-template-columns: auto 1200px auto;
         }
-    
-        display: grid;
-        grid-template-columns: 15px auto 15px;
-        grid-template-areas:
-        ". section-3-content .";
-        
-        @include md{
-            margin: 51px 0;
+
+        @include md {
             display: grid;
+            grid-template-areas: ". section-3-content .";
             grid-template-columns: 10% auto 10%;
-            grid-template-areas:
-            ". section-3-content .";
-        }
-
-        @include lg{
             margin: 51px 0;
-            display: grid;
-            grid-template-columns: 20% auto 20%;
-            grid-template-areas:
-            ". section-3-content .";
         }
 
-        #section-3-content{
-            >h1{
+        @include lg {
+            display: grid;
+            grid-template-areas: ". section-3-content .";
+            grid-template-columns: 20% auto 20%;
+            margin: 51px 0;
+        }
+
+        #section-3-content {
+            grid-area: section-3-content;
+
+            >h1 {
                 margin: 15px 0;
             }
-            >hr{
-                border: none;
+
+            >hr {
                 background-color: $sand;
+                border: none;
                 height: 2px;
             }
-            grid-area: section-3-content;
         }
     }
 }
