--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -18,6 +18,19 @@
                 align-items: center;
                 display: flex;
                 margin: 0px 30px 0 0;
+                
+                a:link,
+                a:visited {
+                    color: $marble;
+                    font-size: rem-calc(20);
+                    text-decoration: none;
+                    transition: 0.25s;
+                }
+    
+                a:hover,
+                a:active {
+                    color: $white;
+                }
             }
 
             a:link,
@@ -30,7 +43,7 @@
 
             a:hover,
             a:active {
-                color: $white;
+                color: $sand;
             }
         }
     }
